Fix horizontal scrolling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,10 @@ html {
 body {
   box-sizing: border-box; }
 
+html, body {
+  max-width: 100%;
+  overflow-x: hidden; }
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -55,8 +59,7 @@ footer, header, hgroup, menu, nav, section {
   display: block; }
 
 body {
-  line-height: 1;
-  overflow-x: hidden; }
+  line-height: 1; }
 
 ol, ul {
   list-style: none; }
