--- a/assets/sass/base/_base.scss
+++ b/assets/sass/base/_base.scss
@@ -11,6 +11,11 @@ html {
 body {
   box-sizing: border-box; }
 
+html, body {
+	max-width: 100%;
+	overflow-x: hidden;
+}
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -34,9 +39,9 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+
 body {
 	line-height: 1;
-	overflow-x: hidden;
 }
 ol, ul {
 	list-style: none;
